[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netmeter-tray"
version = "0.1.0"
description = "Tiny scan-lined network speed meter for the system tray (Qt/PySide6)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "sir-canada" }]
requires-python = ">=3.9"
dependencies = ["PySide6>=6.4"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/sir-canada/netmeter-tray"

[project.scripts]
netmeter = "netmeter:main"

[tool.setuptools]
py-modules = ["netmeter"]
